--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 ### Personal exclusions
-*.iml
 *.8102
-
 /UnlimitedJCEPolicyJDK8/
 /.gtm/
 
@@ -10,6 +8,12 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
+.idea/codeStyleSettings.xml
+.idea/compiler.xml
+.idea/issues.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
 .idea/workspace.xml
 .idea/tasks.xml
 
@@ -31,6 +35,7 @@
 
 ## File-based project format:
 *.iws
+*.iml
 
 ## Plugin-specific files:
 
@@ -78,3 +83,7 @@ buildNumber.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/
+partone/src/main/resources/
+partone/target/
+parttwo/src/
