--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /.gtm/
 
 partone/files/
+parttwo/files/
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
