--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 partone/files/
 parttwo/files/
 
+*.zip
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
